# site_1

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: api.py  config.py  db.py  main.py  models.py  schemas.py  services.py
backend/tests/: test_booking.py
frontend/: .env.local.example  Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ApartmentCard.tsx  BookingModal.tsx
frontend/lib/: api.ts  date.ts  types.ts
